fix: swagger params & path
